[package]
name = "xtend"
description = "Simple tool to work with file extensions"
license-file = "LICENSE"
homepage = "https://github.com/hardliner66/xtend"
repository = "https://github.com/hardliner66/xtend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
clap = { version = "3.2.1", features = ["derive"] }
